[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/scripts/NPC_Phantom.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/phantom_idle_0.png" type="Texture" id=2]
[ext_resource path="res://assets/gfx/phantom_idle_1.png" type="Texture" id=3]
[ext_resource path="res://assets/gfx/phantom_idle_2.png" type="Texture" id=4]
[ext_resource path="res://assets/gfx/phantom_idle_3.png" type="Texture" id=5]
[ext_resource path="res://assets/gfx/phantom_idle_4.png" type="Texture" id=6]
[ext_resource path="res://assets/gfx/phantom_idle_5.png" type="Texture" id=7]
[ext_resource path="res://assets/gfx/phantom_laugh_0.png" type="Texture" id=8]
[ext_resource path="res://assets/gfx/phantom_laugh_1.png" type="Texture" id=9]
[ext_resource path="res://assets/gfx/phantom_laugh_2.png" type="Texture" id=10]
[ext_resource path="res://assets/gfx/phantom_laugh_3.png" type="Texture" id=11]
[ext_resource path="res://assets/gfx/phantom_laugh_4.png" type="Texture" id=12]
[ext_resource path="res://assets/gfx/phantom_laugh_5.png" type="Texture" id=13]
[ext_resource path="res://assets/gfx/phantom_awake_0.png" type="Texture" id=14]
[ext_resource path="res://assets/gfx/phantom_awake_1.png" type="Texture" id=15]
[ext_resource path="res://assets/gfx/phantom_awake_2.png" type="Texture" id=16]
[ext_resource path="res://assets/gfx/phantom_awake_3.png" type="Texture" id=17]
[ext_resource path="res://assets/gfx/phantom_awake_4.png" type="Texture" id=18]
[ext_resource path="res://assets/gfx/phantom_awake_5.png" type="Texture" id=19]
[ext_resource path="res://assets/gfx/phantom_chuckle_0.png" type="Texture" id=20]
[ext_resource path="res://assets/gfx/phantom_chuckle_1.png" type="Texture" id=21]
[ext_resource path="res://assets/gfx/phantom_chuckle_2.png" type="Texture" id=22]
[ext_resource path="res://assets/gfx/phantom_chuckle_3.png" type="Texture" id=23]
[ext_resource path="res://assets/gfx/sfx_bullet.ogg" type="AudioStream" id=24]
[ext_resource path="res://assets/gfx/sfx_chuckle.ogg" type="AudioStream" id=25]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "laugh",
"speed": 8.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": false,
"name": "awake",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "chuckle",
"speed": 10.0
} ]

[node name="NPC_Phantom" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="NPC_Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "awake"

[node name="SFX_Bullet" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = -6.0

[node name="SFX_Chuckle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -6.0

[node name="Attack_Timer" type="Timer" parent="."]
wait_time = 6.0

[node name="ROF_Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="Attack_Duration" type="Timer" parent="."]

[node name="Bullet_Spawn_1" type="Position2D" parent="."]
position = Vector2( 0, 12 )
[connection signal="timeout" from="Attack_Timer" to="." method="_on_Attack_Timer_timeout"]
[connection signal="timeout" from="ROF_Timer" to="." method="_on_ROF_Timer_timeout"]
[connection signal="timeout" from="Attack_Duration" to="." method="_on_Attack_Duration_timeout"]
